Fixed mvp image on mobile

--- a/assets/stylesheets/style.less
+++ b/assets/stylesheets/style.less
@@ -91,6 +91,13 @@ header {
             float: right;
 
             padding: 0 30px 0 0;
+
+            width: 21px;
+            height: 30px;
+
+            span {
+                display: none;
+            }
         }
     }
 }
@@ -272,6 +279,12 @@ header {
 
             .copyright {
                 font-size: 10px;
+
+                width: auto;
+
+                span {
+                    display: block;
+                }
             }
         }
     }
